exports[`test A standard order 1`] = `
<li
  className="bVHbHQ">
  <span
    className="jrqJwq">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fMqdCr">
    MOOIE 456 TEST
  </span>
  <span
    className="hzUbLx">
    <div>
       
      <div>
         
        1
        x 
        Name of the product
         
      </div>
      <div>
         
        2
        x 
        Another product
         
      </div>
       
    </div>
  </span>
  <span
    className="bOrTEM">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="eFDsTa">
    completed
  </span>
  <span
    className="bRJYKR">
    <a
      aria-label="Download invoice"
      className="kYeBEf"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink" />
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="bVHbHQ">
  <span
    className="jrqJwq">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fMqdCr">
    MOOIE 456 TEST
  </span>
  <span
    className="hzUbLx">
    <div>
       
      <div>
         
        1
        x 
        Name of the product
         
      </div>
      <div>
         
        2
        x 
        Another product
         
      </div>
       
    </div>
  </span>
  <span
    className="bOrTEM">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="eFDsTa">
    pending
  </span>
  <span
    className="bRJYKR">
    <button
      aria-label="Download invoice"
      className="wmLcN knOsJT"
      disabled="disabled"
      to="http://somelink" />
  </span>
</li>
`;
